--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -53,14 +53,96 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.chat-title{
+  font-size: 24px;
+  color: #333;
+  padding-top: 36px;
+}
+
+.header-button{
+  margin-top: 40px;
+}
+
+.header-button a{
+  text-decoration: none;
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+}
+
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll;
 }
+
+.upper-message{
+  display: flex;
+  margin: 10px 0;
+}
+
+.chatting-name{
+  font-size: 16px;
+  color: #434A54;
+}
+
+.created-time{
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+}
+
+.message-content{
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
+}
+
 .form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form-input{
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form-message{
+  border: none;
+  padding-left: 10px;
+  height: 50px;
+  width: 100%;
+}
+
+.form-submit{
+  border: none;
+  color: white;
+  background-color: #38AEF0;
+  padding: 0 20px;
+  height: 50px;
+  margin-left: 15px;
+  font-size: 16px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
