--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,19 +3,16 @@
   <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
   <div class="room-create">
-  <a href="#">チャットを作成する</a>
+    <%= link_to "チャットを作成する", new_room_path %>
   </div>
 </div>
 
 <div class="rooms">
+    <% current_user.rooms.each do |room|%>
   <div class="room-contents">
   <div class="room-content">
-  <a href="#">test</a>
+  <a href="#"><%= room.name %></a>
   </div>
   </div>
-    <div class="room-contents">
-  <div class="room-content">
-  <a href="#">test1</a>
-  </div>
-  </div>
+  <% end %>
 </div>
