--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -86,12 +86,12 @@
   margin: 10px 0;
 }
 
-.chatting-name{
+.message-user{
   font-size: 16px;
   color: #434A54;
 }
 
-.created-time{
+.message-date{
   font-size: 12px;
   color: #999;
   padding-left: 10px;
