--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat-header">
   <div class="right-header">
     <div class="chat-title">
-    testtest
+    <%= @room.name%>
     </div>
   </div>
   <div class="left-header">
